--- a/_config.yml
+++ b/_config.yml
@@ -37,19 +37,19 @@ author:
   type      : # "person" (default), "organization"
   name      : altman
   url       : http://ww1.sinaimg.cn/large/9ff47d03ly1g8icunthzkj20oc0o47gv.jpg
-  avatar    : # path or url of avatar image (square)
+  avatar    : https://tva1.sinaimg.cn/large/006tNbRwly1ga10rwsubuj30ny0mkgy2.jpg) # path or url of avatar image (square)
   bio       : I am an amazing person.
   email     : 13331167937@163.com
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
-  weibo     : https://www.weibo.com/2683600131/profile? # "user_id"   the last part of your profile url, e.g. https://www.weibo.com/user_id/profile?...
+  weibo     : 2683600131 # "user_id"   the last part of your profile url, e.g. https://www.weibo.com/user_id/profile?...
   googleplus: # "user_id"   the last part of your profile url, e.g. https://plus.google.com/u/0/user_id
   telegram  : # "user_name" the last part of your profile url, e.g. https://t.me/user_name
   medium    : # "user_name" the last part of your profile url, e.g. https://medium.com/user_name
   zhihu     : # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
   douban    : # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
   linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
-  github    : https://github.com/Ctrlsman # "user_name" the last part of your profile url, e.g. https://github.com/user_name
+  github    : Ctrlsman # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
 
 
